--- a/platforms/android/demo/build.gradle
+++ b/platforms/android/demo/build.gradle
@@ -10,7 +10,9 @@ android {
   }
 
   sourceSets.main {
-    assets.srcDirs = ['../../../scenes']
+    assets.srcDirs = ['../../scenes']
+    // enable breaking in cpp code by declaring tangram library here
+    jniLibs.srcDirs = ['../tangram/build/intermediates/cmake/full/debug/obj']
   }
 
   aaptOptions.ignoreAssetsPattern "!*.ttf"
